<resources>
    <string name="app_name">星课堂</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="pwd">密码</string>
    <string name="phone_number">手机号</string>
    <string name="account">账号</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="quick_reg">快速注册</string>
    <string name="reg">注册</string>
    <string name="pwd_regular">6-20位数字、字母、下划线</string>
    <string name="nick">昵称</string>
    <string name="code">验证码</string>
    <string name="ok">确定</string>
    <string name="send_code">发送验证码</string>
    <string name="pwd_format_error">密码格式错误</string>
    <string name="account_error">账号错误</string>
    <string name="error">发生错误，请稍后再试</string>
    <string name="send_suc">发送成功</string>
    <string name="send_fail">发送失败</string>
    <string name="input_phone">请输入正确的手机号</string>
    <string name="input_nick">请输入昵称</string>
    <string name="error_code">验证码错误</string>
    <string name="all_lessons">全部课程</string>
    <string name="my_lesson">我的课程</string>
    <string name="my_star">我的星币</string>
    <string name="settting">设置</string>
    <string name="sign">签到</string>
    <string name="star_init">我的星币：0</string>
    <string name="days_init">已连续签到0天</string>
    <string name="sign_rule">签到规则：</string>
    <string name="sign_rule_content">1.每天可签到一回\n2.首次签到可获得10$\n3.连续签到,每次增加10$\n4.中断一次后重新计数\n5.一次签到最多可获得100$</string>
    <string name="days_format">已经连续签到%d天</string>
    <string name="stars_format">我的星币：%d</string>
    <string name="download_suc">下载完成，即将自动安装</string>
    <string name="download_fial">下载失败，请稍后重试</string>
    <string name="cancer">取消</string>
    <string name="intr">课程介绍</string>
    <string name="list">课程列表</string>
    <string name="get_account_fail">获取账号失败</string>
    <string name="two_pwd_no_same">两次密码不一致</string>
    <string name="lesson_complete">你已经看完了全部课程</string>
</resources>
