<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/mystars_top_height"
        android:background="@drawable/shape_star_top_bg">

        <Button
            android:id="@+id/star_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/selector_code_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:enabled="false"
            android:text="@string/sign"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_18" />

        <TextView
            android:id="@+id/star_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/star_sign"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/star_init"
            android:textSize="@dimen/font_18" />

        <TextView
            android:id="@+id/star_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/star_sign"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/days_init"
            android:textSize="@dimen/font_14" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_rule"
        android:textSize="@dimen/font_20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/sign_rule_content"
        android:textSize="@dimen/font_18" />

</LinearLayout>