<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.xubin.starclass.views.CustomEdit
        android:id="@+id/find_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        app:bt_src="@drawable/error_gray"
        app:et_maxlength="11"
        app:hint_text="@string/phone_number"
        app:input_type="number"
        app:label_text="@string/account"
        app:label_width="60dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.xubin.starclass.views.CustomEdit
            android:id="@+id/find_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/find_send_code"
            app:bt_src="@drawable/error_gray"
            app:et_maxlength="4"
            app:hint_text="@string/code"
            app:input_type="number"
            app:label_text="@string/code"
            app:label_width="60dp" />
        <Button
            android:id="@id/find_send_code"
            android:textSize="@dimen/font_14"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:textColor="@color/selector_code_color"
            android:background="@drawable/selector_code_bg"
            android:text="@string/send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/find_cancer"
            android:textSize="@dimen/font_14"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:textColor="@color/selector_code_color"
            android:background="@drawable/selector_code_bg"
            android:text="@string/cancer"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/find_ok"
            android:textSize="@dimen/font_14"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:textColor="@color/selector_code_color"
            android:background="@drawable/selector_code_bg"
            android:text="@string/ok"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>